--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@600&display=swap');
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -20,6 +22,14 @@ code {
   height: 100vh;
 }
 
+
+.card__title {
+  font-size: 22px;
+  color: #292929;
+  font-weight: 500;
+  font-family: 'Poppins';
+}
+
 .card {
   width: 50%;
   height: 50%;
@@ -35,15 +45,20 @@ code {
 
 .dropdown {
   position: relative;
+  font-family: 'Poppins';
 }
 
 .dropdown__button {
   padding: 8px 16px;
-  border: 1px solid #ccc;
+  border: none;
   background-color: #f8f8f8;
   color: #333;
-  font-size: 14px;
+  font-size: 16px;
   cursor: pointer;
+  font-family: 'Poppins';
+  width: 320px;
+  font-weight: 400;
+  text-align: left;
 }
 
 .dropdown__list {
